apps/architecture-portal/versioned_docs/version-1.0.41.0/assembly/lmdj.mdx
---
title: LMDJ Product Assembly
area: assembly
status: implemented
owners: [product, core, release]
source_paths: [products/lmdj, products/lmdj/assembly.lock.json]
---

import {BuildIdentity} from '@site/src/components/BuildIdentity';

<BuildIdentity />

## 当前组合
当前 source 为 Product Build `1.0.41.0`，在 Build 40 的 Stage 9 remediation 上加入同一签名 Product Release 的双 Web Host 六资产交付与两条独立部署控制面。Assembly 只装配当前写入 Contract `lmdj.project.v3 · 3.0.0`，portable bundle 保持 `lmdj.project-bundle.v1 · 1.1.0`；`lmdj.error.v1 · 1.1.0` 继续公开 Bank/Project quota 错误。Project I/O 为 `1.0.1`、Audio Runtime 为 `2.0.1`、Application Facade 为 `2.1.1`；Web Runtime Platform 保持 `2.0.1`，Creator Web 与 Formal Web Runtime Host 保持 `2.1.1`。Project Cooker、Contract、Provider 与 Capability 身份不变。
Product Build `1.0.25.0` 曾分配 G2 evidence-durability 级联，同样不新增公开产品能力。
Product Build `1.0.24.0` 曾分配八个 Core Module、五个 Host、两个本地 Proof Provider 与八个 active Contract。与前一构建相比，Provider SDK 升至 `1.1.2`，Application Facade 升至 `1.4.1`，Web Runtime Platform 升至 `0.3.1`，CLI/MCP/Native/Creator/Formal Web Runtime Host 与两个本地 Proof Provider 也同步完成 PATCH 级联；Contract 集合与 Provider policy 不变。

## 编译接线
`products/lmdj/src/compiled_assembly.cpp` 是产品专属 wiring；产品中立模块不知道 LMDJ 的具体组合。
Product CMake 只在 Emscripten `lmdj_web_runtime_host` target 存在时链接 compiled catalog object，并注入 Product Build、Platform version 以及 Creator/Diagnostic 两组精确 distribution-contract/Host identity。两个 Web Host 只声明 Web Runtime Platform 依赖；Platform 声明 Facade/Audio 依赖，Provider wiring 仍只属于 Product Assembly。
## Policy
当前 Provider policy 仅允许 local/public/proof.execute 范围，与 Proof-only Provider 相符。
## 身份与完整性
Product Build、每个组件版本和 source hash 被锁定；门户事实生成会拒绝任何漂移。
Project Bundle Contract 仍是 portable transfer 边界；Project v3 是唯一当前写入真相 Contract；同构建 Web transport 仍不是公开 Contract。Provider、Capability 与 model identity 未变化。
## 限制
Sequence recording 已实现；持久化 Asset 编辑、Crop Undo、生产 Provider、云能力、物理 Web 验收与 `beta`/`stable` 仍不能由当前 Assembly 成员关系或门户快照推导。Build Identity 只证明当前页面绑定的 Product/Assembly 身份。
