apps/architecture-portal/versioned_docs/version-1.0.42.0/assembly/lmdj.mdx
---
title: LMDJ Product Assembly
area: assembly
status: implemented
owners: [product, core, release]
source_paths: [products/lmdj, products/lmdj/assembly.lock.json]
---

import {BuildIdentity} from '@site/src/components/BuildIdentity';

<BuildIdentity />

## 当前组合
当前 source 为 Product Build `1.0.42.0`，在 Build 41 的双 Web Host 六资产交付上装配 Stage 10 的 Perform 演奏、录制与重放能力。Assembly 新增 `lmdj.project.v4 · 4.0.0` 并以它为唯一当前写入真相 Contract；`lmdj.project.v3 · 3.0.0` 仍留在 active Contract 集合，但与 v1/v2 一样降级为只读迁移输入。portable bundle 保持 `lmdj.project-bundle.v1 · 1.1.0`；`lmdj.error.v1 · 1.1.0`、`lmdj.capability.v2 · 2.0.0`、`lmdj.assembly.v2 · 2.0.0`、`lmdj.module.v1 · 1.0.0` 与 `lmdj.product-version.v1 · 1.0.0` 身份不变。Core Module 侧 Authoring Domain 升至 `2.0.0`、Project I/O 升至 `2.0.0`、Project Cooker 升至 `1.1.0`、Audio Runtime 升至 `3.0.0`、Application Facade 升至 `3.0.0`、Web Runtime Platform 升至 `3.0.0`；Foundation 保持 `0.3.0`，Provider SDK 保持 `1.1.4`。CLI、MCP、Native Test Host、Formal Web Runtime Host 与 Creator Web 五个 Host 同步升至 `3.0.0`。两个本地 Proof Provider 保持 `1.0.5`，`proof.candidate.v2 · 2.0.0`、Provider policy 与 Capability 身份不变，Private Web 协议版本仍为 `1`。交付层唯一新增的是 Platform 自有的 `perform_master_tap_worklet`（`assets/perform-master-tap.*.js`）：它只属于 Creator Web distribution contract 的六资产清单，Diagnostic Web Runtime Host 的十五资产清单明确不声明它。
Product Build `1.0.25.0` 曾分配 G2 evidence-durability 级联，同样不新增公开产品能力。
Product Build `1.0.24.0` 曾分配八个 Core Module、五个 Host、两个本地 Proof Provider 与八个 active Contract。与前一构建相比，Provider SDK 升至 `1.1.2`，Application Facade 升至 `1.4.1`，Web Runtime Platform 升至 `0.3.1`，CLI/MCP/Native/Creator/Formal Web Runtime Host 与两个本地 Proof Provider 也同步完成 PATCH 级联；Contract 集合与 Provider policy 不变。

## 编译接线
`products/lmdj/src/compiled_assembly.cpp` 是产品专属 wiring；产品中立模块不知道 LMDJ 的具体组合。
Product CMake 只在 Emscripten `lmdj_web_runtime_host` target 存在时链接 compiled catalog object，并注入 Product Build、Platform version 以及 Creator/Diagnostic 两组精确 distribution-contract/Host identity。两个 Web Host 只声明 Web Runtime Platform 依赖；Platform 声明 Facade/Audio 依赖，Provider wiring 仍只属于 Product Assembly。
Platform CMake 从生成的 Runtime identity 注入全部九个资源上限，其中 `perform_recording_frames` 与 `perform_recording_queue_batches` 是 Stage 10 新增项；native manifest gate 逐个校验精确值，并要求声明 `compatible_hosts` 的 Creator 清单恰好携带一个 `perform_master_tap_worklet`、Diagnostic Host 清单为零，重复或游离条目按 inventory 缺陷 fail closed。Creator 打包工具在 Vite 产物中定位唯一的 Perform master-tap 模块、按内容哈希写入 `assets/perform-master-tap.<sha256>.js` 并只重写主包中那一处引用；零匹配或多匹配都拒绝打包。
## Policy
当前 Provider policy 仅允许 local/public/proof.execute 范围，与 Proof-only Provider 相符。
## 身份与完整性
Product Build、每个组件版本和 source hash 被锁定；门户事实生成会拒绝任何漂移。
Project Bundle Contract 仍是 portable transfer 边界；Project v4 是唯一当前写入真相 Contract，v3 与 v1/v2 只作为迁移输入被读取；同构建 Web transport 仍不是公开 Contract。Provider、Capability 与 model identity 未变化。
## 限制
Sequence recording 与 Perform 演奏录制、重放、resample 提交已实现；持久化 Asset 编辑、Crop Undo、生产 Provider、云能力、物理 Web 验收与 `beta`/`stable` 仍不能由当前 Assembly 成员关系或门户快照推导。Stage 10 尚无物理演奏验收，自动化通过只证明状态与边界。Build Identity 只证明当前页面绑定的 Product/Assembly 身份，不证明 tag、Release、immutable snapshot、部署或 Channel promotion 已发生。
